--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,33 @@
-.right-0{
+.right-0 {
     right: 0;
 }
-.ml-auto{
+
+.ml-auto {
     margin-left: auto;
+}
+.vh-100{
+    height: 100vh;
+}
+.form-wrap {
+    background: whitesmoke;
+    padding: 40px 30px;
+    border-radius: 10px;
+}
+
+.input-box input {
+    width: 100%;
+    display: block;
+    height: 47px;
+    border: 1px solid #e8e7e7;
+    border-radius: 5px;
+    padding: 0 20px;
+}
+
+.input-box {
+    margin-bottom: 10px;
+}
+
+.input-box label {
+    margin-bottom: 5px;
+    display: inline-block;
 }
