--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,9 +5,11 @@
 .ml-auto {
     margin-left: auto;
 }
-.vh-100{
+
+.vh-100 {
     height: 100vh;
 }
+
 .form-wrap {
     background: whitesmoke;
     padding: 40px 30px;
@@ -30,4 +32,20 @@
 .input-box label {
     margin-bottom: 5px;
     display: inline-block;
+}
+
+ul.sidebar-nav li {
+    list-style: none;
+}
+
+ul.sidebar-nav {
+    padding: 0;
+}
+
+ul.sidebar-nav li a {
+    text-decoration: none;
+    color: #c2c2c2;
+}
+.sidebar-nav li .nav-link {
+    justify-content: space-between;
 }
